--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "^1.3.0",
+    "cheerio": "^0.19.0",
     "log4js": "^0.6.26",
     "request": "^2.58.0"
   }
